@@ -1,6 +1,7 @@
 0.17.0
 ------
 
+* This release is the last one to support Python 2.7.
 * Fixed issue when `response.iter_content` when `chunk_size=None` entered infinite loop
 * Fixed issue when `passthru_prefixes` persisted across tests.
   Now `add_passthru` is valid only within a context manager or for a single function and
